name:                ICFPC2017
version:             0.1.0.0
homepage:            https://github.com/halfaya/ICFPC2017
license:             MIT
license-file:        LICENSE
author:              John Leo
maintainer:          leo@halfaya.org
copyright:           2017 John Leo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable icfpc2017
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data, Graph, Strategy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5,
                       network-simple,
                       bytestring,
                       aeson,
                       aeson-pretty,
                       unordered-containers,
                       containers

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/halfaya/ICFPC2017
